--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,18 +10,18 @@
 .header-title header {
   width: 100%;
   background-color: #ff69b4;
-  color: #000;
-  text-decoration: none;
+  color: #FFFFFF;
+  margin: 1%;
   text-align: center;
 }
 
 .header-title header a {
-  color: #000;
+  color: #FFFFFF;
   text-decoration: none;
 
 }
 
-@media all and (max-width: 600px) {
+@media all and (max-width: 100%) {
   .header-title {
     display: none;
   }
