--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,16 +1,17 @@
 .homeContainer {
     display: flex;
     flex-direction: row;
+    flex-basis: auto;
 }
 
 .chartContainer {
-    width: auto;
+    width: 100%;
+    height: 100%;
 }
 
 
-  /* @media all and (max-width: 600px) {
+  @media all and (max-width: 400px) {
     .chartContainer {
-      display: none;
+      width: 100%;
     }
-  } */
-  
+  }
